--- a/MovieSearch/Resources/Base.lproj/Main.storyboard
+++ b/MovieSearch/Resources/Base.lproj/Main.storyboard
@@ -88,7 +88,7 @@
                                                             <state key="normal" title="Hide">
                                                                 <color key="titleColor" systemColor="tintColor"/>
                                                             </state>
-                                                            <state key="selected" title="Unhide">
+                                                            <state key="selected">
                                                                 <color key="titleColor" systemColor="tintColor"/>
                                                             </state>
                                                         </button>
